--- a/desktop/src/main/resources/org/example/desktop/producto-detalle-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/producto-detalle-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="620.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.ProductoController">
+<BorderPane prefHeight="620.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.ProductoDetalleController">
 
     <!-- Sidebar izquierdo: lo dejamos tal cual -->
     <left>
