--- a/desktop/src/main/resources/org/example/desktop/proveedores-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/proveedores-view.fxml
@@ -43,7 +43,7 @@
                 <Button fx:id="actualizar" layoutX="16.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="259.0" text="Actualizar" />
                 <Button fx:id="desactivar" layoutX="16.0" layoutY="654.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="259.0" text="Desactivar" />
 
-                <SplitMenuButton fx:id="menuEstado" layoutX="127.0" layoutY="412.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Estado">
+                <SplitMenuButton fx:id="menuEstado" layoutX="128.0" layoutY="477.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Estado">
                     <items>
                         <MenuItem mnemonicParsing="false" text="Action 1" />
                         <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -53,19 +53,13 @@
                 <TextField fx:id="txtDireccion" layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Direccion" />
                 <TextField fx:id="txtRazonSocial" layoutX="127.0" layoutY="280.0" prefHeight="38.0" prefWidth="150.0" promptText="Razon Social" />
                 <TextField fx:id="txtId" layoutX="127.0" layoutY="234.0" prefHeight="38.0" prefWidth="150.0" promptText="ID" />
-                <TextField fx:id="txtTelefono" layoutX="127.0" layoutY="370.0" prefHeight="38.0" prefWidth="150.0" promptText="Telefono" />
-                <SplitMenuButton fx:id="menuProveedor" layoutX="127.0" layoutY="455.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Proveedor">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                </SplitMenuButton>
 
                 <Label layoutX="12.0" layoutY="245.0" text="ID" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
+                <TextField fx:id="txtTelefono" layoutX="127.0" layoutY="370.0" prefHeight="38.0" prefWidth="150.0" promptText="Telefono" />
 
                 <Label layoutX="10.0" layoutY="381.0" text="Telefono" textFill="WHITE">
                     <font>
@@ -86,16 +80,17 @@
                 </Label>
 
 
-                <Label layoutX="16.0" layoutY="427.0" text="Estado" textFill="WHITE">
+                <Label layoutX="17.0" layoutY="484.0" text="Estado" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <Label layoutX="15.0" layoutY="462.0" text="Proveedor" textFill="WHITE">
-                    <font>
-                        <Font name="System Bold" size="12.0" />
-                    </font>
-                </Label>
+            <TextField fx:id="txtEmail" layoutX="128.0" layoutY="416.0" prefHeight="38.0" prefWidth="150.0" promptText="Email" />
+            <Label layoutX="11.0" layoutY="427.0" text="Emal" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
             </children>
         </AnchorPane>
     </center>
