--- a/desktop/src/main/resources/org/example/desktop/menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/menu-view.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane styleClass="main-container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.MenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" styleClass="main-container" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.MenuController">
 
     <left>
         <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
@@ -16,16 +21,15 @@
         <URL value="@estilos/menu-principal.css" />
     </stylesheets>
    <right>
-      <AnchorPane  styleClass="content-pane"  prefHeight="790.0" prefWidth="999.0" stylesheets="@estilos/menu-principal.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="900.0" prefWidth="1400.0" styleClass="content-pane" stylesheets="@estilos/menu-principal.css" BorderPane.alignment="CENTER">
          <children>
-             <HBox layoutX="81.0" layoutY="85.0" alignment="CENTER_LEFT" spacing="15">
-                 <ImageView fitHeight="65.0" fitWidth="87.0" layoutX="81.0" layoutY="85.0" pickOnBounds="true"
-                            preserveRatio="true">
-                     <Image url="@images/ion--home.png"/>
+             <HBox alignment="CENTER_LEFT" layoutX="81.0" layoutY="85.0" spacing="15">
+                 <ImageView fitHeight="65.0" fitWidth="87.0" layoutX="81.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
+                     <Image url="@images/ion--home.png" />
                  </ImageView>
                  <VBox>
-                     <Label styleClass="welcome-title" text="Bienvenido, (user)"/>
-                     <Label styleClass="welcome-subtitle" text="Seleccione modulo"/>
+                     <Label styleClass="welcome-title" text="Bienvenido, (user)" />
+                     <Label styleClass="welcome-subtitle" text="Seleccione modulo" />
                  </VBox>
              </HBox>
 
@@ -33,9 +37,9 @@
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                             <Image url="@images/majesticons--shopping-cart.png"/>
+                             <Image url="@images/majesticons--shopping-cart.png" />
                          </ImageView>
-                         <Label styleClass="button-text" text="Punto de Venta" textFill="WHITE"/>
+                         <Label styleClass="button-text" text="Punto de Venta" textFill="WHITE" />
                      </VBox>
                  </graphic>
              </Button>
@@ -43,9 +47,9 @@
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                             <Image url="@images/mage--package-box-fill.png"/>
+                             <Image url="@images/mage--package-box-fill.png" />
                          </ImageView>
-                         <Label styleClass="button-text" text="Inventario/Productos" textFill="WHITE"/>
+                         <Label styleClass="button-text" text="Inventario/Productos" textFill="WHITE" />
                      </VBox>
                  </graphic>
              </Button>
@@ -53,9 +57,9 @@
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                             <Image url="@images/weui--contacts-filled.png"/>
+                             <Image url="@images/weui--contacts-filled.png" />
                          </ImageView>
-                         <Label styleClass="button-text" text="Proveedores" textFill="WHITE"/>
+                         <Label styleClass="button-text" text="Proveedores" textFill="WHITE" />
                      </VBox>
                  </graphic>
              </Button>
@@ -63,39 +67,39 @@
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                             <Image url="@images/icomoon-free--stats-bars.png"/>
+                             <Image url="@images/icomoon-free--stats-bars.png" />
                          </ImageView>
-                         <Label styleClass="button-text" text="Gráfico de Inventario" textFill="WHITE"/>
+                         <Label styleClass="button-text" text="Gráfico de Inventario" textFill="WHITE" />
                      </VBox>
                  </graphic>
              </Button>
 
 
-             <VBox layoutX="81.0" layoutY="450.0" prefWidth="400.0" styleClass="info-section">
-                 <Label styleClass="section-header" text="Información General"/>
-                 <VBox styleClass="info-content" spacing="15">
-                     <HBox styleClass="info-item" alignment="CENTER_LEFT" spacing="15">
-                         <Label styleClass="info-icon, income-icon" text="💰"/>
+             <VBox layoutX="71.0" layoutY="450.0" prefHeight="244.0" prefWidth="600.0" styleClass="info-section">
+                 <Label styleClass="section-header" text="Información General" />
+                 <VBox spacing="15" styleClass="info-content">
+                     <HBox alignment="CENTER_LEFT" spacing="15" styleClass="info-item">
+                         <Label styleClass="info-icon, income-icon" text="💰" />
                          <VBox spacing="2">
-                             <Label styleClass="info-label" text="Ingresos hoy"/>
-                             <Label styleClass="info-value" text="(ingresos fecha)"/>
+                             <Label styleClass="info-label" text="Ingresos hoy" />
+                             <Label styleClass="info-value" text="(ingresos fecha)" />
                          </VBox>
                      </HBox>
-                     <HBox styleClass="info-item" alignment="CENTER_LEFT" spacing="15">
-                         <Label styleClass="info-icon, sales-icon" text="💰"/>
+                     <HBox alignment="CENTER_LEFT" spacing="15" styleClass="info-item">
+                         <Label styleClass="info-icon, sales-icon" text="💰" />
                          <VBox spacing="2">
-                             <Label styleClass="info-label" text="Ventas hoy (fecha)"/>
-                             <Label styleClass="info-value" text="(numero de ventas)"/>
+                             <Label styleClass="info-label" text="Ventas hoy (fecha)" />
+                             <Label styleClass="info-value" text="(numero de ventas)" />
                          </VBox>
                      </HBox>
                  </VBox>
              </VBox>
 
-             <VBox layoutX="510.0" layoutY="450.0" prefWidth="400.0" styleClass="info-section">
+             <VBox layoutX="700.0" layoutY="450.0" prefHeight="147.0" prefWidth="600.0" styleClass="info-section">
 
-                 <Label styleClass="section-header" text="Últimos movimientos"/>
-                 <VBox styleClass="info-content" spacing="10">
-                     <Label styleClass="empty-message" text="No hay movimientos recientes"/>
+                 <Label styleClass="section-header" text="Últimos movimientos" />
+                 <VBox spacing="10" styleClass="info-content">
+                     <Label styleClass="empty-message" text="No hay movimientos recientes" />
                  </VBox>
              </VBox>
          </children>
