--- a/desktop/src/main/resources/org/example/desktop/side-menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/side-menu-view.fxml
@@ -72,6 +72,15 @@
             <Font name="System Bold" size="12.0" />
         </font>
     </Button>
+    <Button fx:id="settingsBtn2" maxWidth="Infinity" text="Orden COMPRA" onAction="#irOrdenCompra">
+        <styleClass>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
+        </styleClass>
+        <font>
+            <Font name="System Bold" size="12.0" />
+        </font>
+    </Button>
     <Button fx:id="settingsBtn1" layoutX="25.0" layoutY="307.0" maxWidth="Infinity" text="Usuarios" onAction="#irUsuarios">
         <styleClass>
             <String fx:value="button-primary" />
