--- a/desktop/src/main/resources/org/example/desktop/usuarios-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/usuarios-view.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.UsuarioController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.UsuarioController">
 
     <left>
         <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
@@ -17,14 +19,14 @@
    <center>
         <AnchorPane prefHeight="800.0" prefWidth="700.0" BorderPane.alignment="CENTER">
             <children>
-                <TableView fx:id="tablaUsuarios" layoutX="11.0" layoutY="107.0" prefHeight="675.0" prefWidth="755.0">
+                <TableView fx:id="tablaUsuarios" layoutX="210.0" layoutY="91.0" prefHeight="719.0" prefWidth="950.0">
                     <columns>
                         <TableColumn fx:id="idColumn" prefWidth="68.0" text="ID" />
-                        <TableColumn fx:id="nombreColumn" prefWidth="130.0" text="NOMBRE" />
-                        <TableColumn fx:id="apellidoColumn" prefWidth="119.0" text="APELLIDO" />
-                        <TableColumn fx:id="emailColumn" prefWidth="160.0" text="EMAIL" />
-                        <TableColumn fx:id="rolColumn" prefWidth="84.0" text="ROL" />
-                        <TableColumn fx:id="accionColumn" prefWidth="197.0" text="ACCION" />
+                        <TableColumn fx:id="nombreColumn" prefWidth="158.0" text="NOMBRE" />
+                        <TableColumn fx:id="apellidoColumn" prefWidth="130.0" text="APELLIDO" />
+                        <TableColumn fx:id="emailColumn" prefWidth="259.0" text="EMAIL" />
+                        <TableColumn fx:id="rolColumn" prefWidth="134.0" text="ROL" />
+                        <TableColumn fx:id="accionColumn" prefWidth="199.0" text="ACCION" />
                     </columns>
                 </TableView>
             </children></AnchorPane>
